shortening README & fixing typos

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -40,17 +40,12 @@
   },
   {
    "source": [
-    "# Overview"
+    "# Overview\n",
+    "\n",
+    "This project aims to **automate content moderation** to identify hate speech using **machine learning binary classification algorithms.** Baseline models included Random Forest, Naive Bayes, Logistic Regression and SVM models. The final model was a Linear SVM model with an F1 of 0.3955 and Recall (TPR) of 0.4373. This poor performance can be attributed to the massive class imbalance and the model's ability to \"understand\" the nuances of English slang and slurs. Ultimately, automating hate speech detection is an extremely difficult task. And although this project was able to get that process started, there is much more work to be done in order to keep this content off of public-facing forums such as Twitter."
    ],
    "cell_type": "markdown",
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "source": [
@@ -71,7 +66,7 @@
     "\n",
     "The dataset for this capstone project was sourced from a study called Automated Hate Speech Detection and the Problem of Offensive Language  conducted by Thomas Davidson and a team at Cornell University in 2017. The GitHub repository can be found [here](https://github.com/t-davidson/hate-speech-and-offensive-language). The dataset is provided as a `.csv` file with 24,802 text posts from Twitter where 6% of the tweets were labeled as hate speech. \n",
     "\n",
-    "Since content moderation is so subjective, the labels on this dataset were crowdsourced and determined by majority-rules. The “class” column labels each tweet as 0 for hate speech, 1 for offensive language or 2 for neither. In order to create a different project and adapt the data to my specific business context, I will be treating the data as a binary classification problem. \n",
+    "Since content moderation is so subjective, the labels on this dataset were voted on by crowdsource and determined by majority-rules. The “class” column labels each tweet as 0 for hate speech, 1 for offensive language or 2 for neither. In order to create a different project and adapt the data to my specific business context, I will be treating the data as a binary classification problem. \n",
     "\n",
     "Therefore, the final model will be **predicting whether a tweet is hate speech or not.** To prepare the data for this, I will be manually replacing existing 1 and 2 values as 0, and replacing 0 as 1 to indicate hate speech."
    ],
@@ -126,9 +121,9 @@
   },
   {
    "source": [
-    "From these word clouds, we can see some more parallels and differences between what is classified as hate speech or not. For instance, #tcot stands for \"Top Conservatives On Twitter” and it appears in both groups. However, #teabagger, which refers to those who identify with the Tea Party, that is primarily (but not exclusively) associated with the Repubclican Party, appears in only the “Not Hate Speech” cloud. Both hashtags are used among Alt-Right communities.\n",
+    "From these word clouds, we can see some more parallels and differences between what is classified as hate speech or not. For instance, #tcot stands for \"Top Conservatives On Twitter” and it appears in both groups. However, #teabagger, which refers to those who identify with the Tea Party, that is primarily (but not exclusively) associated with the Republican Party, appears in only the “Not Hate Speech” cloud. Both hashtags are used among Alt-Right communities.\n",
     "\n",
-    "Additionally, the #r**skins hashtag appears in only the Not Hate Speech cloud. This was the former name of the Washington NFL team. Knowing the context, we know that hashtag could certainly include text that constitutes as hate speech. WIth this, and other hashtags that appear in the “Not Hate Speech” cloud, we can clearly see the very slight differences between the two labels.\n",
+    "Additionally, the #r**skins hashtag appears in only the Not Hate Speech cloud. This was the former name of the Washington NFL team. Knowing the context, we know that hashtag could certainly include text that constitutes as hate speech. With this, and other hashtags that appear in the “Not Hate Speech” cloud, we can clearly see the very slight differences between the two labels.\n",
     "\n",
     "Besides that, others are simply pop culture references, such as #Scandal the TV show or #vote5sos referring to the boy band. It’s interesting that those contain a lot of offensive language, probably from fan reactions and community conflicts. Ultimately, we can recommend that **Twitter should closely monitor those top hashtags for potential posts containing hate speech** or even regular offensive language.\n"
    ],
@@ -2460,11 +2455,11 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "The final model had an F1 of .3955 and Recall of .437, which isn't much better than random guessing. Although this project had extensive preprocessing and modeling iterations, there is room for improvement.\n",
+    "The final model had an F1 of .3955 and Recall of .437, which isn't much better than random guessing. Although this project had extensive preprocessing and modeling iterations, there is much room for improvement.\n",
     "\n",
     "It's important to understand why the model performed so poorly and how that relates to the business problem. The F1 score was brought down by the \"Hate Speech\" label predictions. The model was able to predict 95% of the \"Not Hate Speech\" labels correctly, but it performed poorly for the other label, only able to correctly predict 44%. \n",
     "\n",
-    "This performance is indicative of the two major roadblocks of the project: (1) the class imbalance of the dataset and (2) the model's ability to identify what constitutes as hate speech.\n",
+    "**This poor performance is indicative of the two major roadblocks of the project:** (1) the class imbalance of the dataset and (2) the model's ability to identify what constitutes as hate speech.\n",
     "\n",
     "The issue of class imbalance is manageable with preprocessing techniques and oversampling/undersampling techniques. However, identifying hate speech is an overall problem that many major tech companies like Twitter, Facebook and Instagram are still struggling with.\n",
     "\n",
@@ -2482,11 +2477,11 @@
   },
   {
    "source": [
-    "Here, we can see that there are 679 words unique to the \"Hate Speech\" label. Some of these words are nonsensical or meaningless, but some are especially hateful words. For example, this label contains phrases such as \"sp-cs\", \"mo-kies\", \"ov-nj-w\", \"fa--ot\" and much more. These are all ethnic or homophobic slurs. Most notably, we saw in earlier EDA that this label disproportionately contains the N-word with the hard \"R\". Language like this\n",
+    "Here, we can see that there are **679 words unique to the \"Hate Speech\" label**. Some of these words are nonsensical or meaningless, but some are especially hateful terms. For example, this label contains phrases such as \"sp-cs\", \"mo-kies\", \"ov-nj-w\", \"fa--ot\" and much more. These are all ethnic or homophobic slurs. Most notably, we saw in earlier EDA that this label disproportionately contains the N-word with the hard \"R\". Language like this directly demonstrates hate speech by targeting marginalized groups.\n",
     "\n",
-    "However, it's hard for a machine learning model to understand the nuances with this hateful slang. Although these words are unique to the \"Hate Speech\" label corpus, there's simply not enough data for that label. Therefore, an important next step would be to collect more data that has been identified as hate speech by CrowFlow voters.\n",
+    "However, it's hard for a machine learning model to understand the nuances with this hateful slang. **Although these words are unique to the \"Hate Speech\" label corpus, there's simply not enough data for that label.** Therefore, an important next step would be to collect more data that has been identified as hate speech by CrowFlow voters.\n",
     "\n",
-    "Additionally, we can recommend for now that Twitter manually moderate these words, just like it could with the top hashtags that were identified for each label in earlier EDA.\n",
+    "Additionally, we can recommend for now that Twitter **manually moderate tweets containing words**, just like it could with the top hashtags that were identified for each label in earlier EDA.\n",
     "\n",
     "Ultimately, automating hate speech detection is an extremely difficult task because of the nuances in English slang and slurs. This project was able to get that process started, but there is much more work to be done to keep this content off of public-facing forums such as Twitter."
    ],
