--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -2494,7 +2494,7 @@
     "\n",
     "To further develop this project, here are some immediate next steps that anyone could execute.\n",
     "\n",
-    "- Collect more potentialHate Speech data to be labeled by CrowdFlow voting system\n",
+    "- Collect more potential \"Hate Speech\" data to be labeled by CrowdFlow voting system\n",
     "- Improve final model with different preprocessing techniques, such as removing offensive language as stop words\n",
     "- Evaluate model with new tweets or other online forum data to see if it can generalize well\n",
     "- LDA Topic Modeling with Gensim\n",
