pickling final model

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -2316,6 +2316,26 @@
   },
   {
    "source": [
+    "## Pickling Final Model\n",
+    "\n",
+    "The final Linear SVM model will be pickled for future use."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 351,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle_out = open(\"./pickle/final_linear_SVM.pkl\",\"wb\")\n",
+    "pickle.dump(SVM_baseline, pickle_out)\n",
+    "pickle_out.close()"
+   ]
+  },
+  {
+   "source": [
     "## Testing Evaluation Metrics"
    ],
    "cell_type": "markdown",
