--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "source": [
-    "***"
+    "![banner](./visualizations/banner.png)\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
