--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "# Twitter Hate Speech Detection\n",
     "\n",
-    "**Please note:** Because of the subject matter of this project, this notebook contains uncensored offensive language from the dataset.\n"
+    "## *Can Content Moderation Be Automated?*"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -42,7 +42,9 @@
    "source": [
     "# Overview\n",
     "\n",
-    "This project aims to **automate content moderation** to identify hate speech using **machine learning binary classification algorithms.** Baseline models included Random Forest, Naive Bayes, Logistic Regression and SVM models. The final model was a Linear SVM model with an F1 of 0.3955 and Recall (TPR) of 0.4373. This poor performance can be attributed to the massive class imbalance and the model's ability to \"understand\" the nuances of English slang and slurs. Ultimately, automating hate speech detection is an extremely difficult task. And although this project was able to get that process started, there is much more work to be done in order to keep this content off of public-facing forums such as Twitter."
+    "This project aims to **automate content moderation** to identify hate speech using **machine learning binary classification algorithms.** Baseline models included Random Forest, Naive Bayes, Logistic Regression and SVM models. The final model was a Linear SVM model with an F1 of 0.3955 and Recall (TPR) of 0.4373. This poor performance can be attributed to the massive class imbalance and the model's ability to \"understand\" the nuances of English slang and slurs. Ultimately, automating hate speech detection is an extremely difficult task. And although this project was able to get that process started, there is much more work to be done in order to keep this content off of public-facing forums such as Twitter.\n",
+    "\n",
+    "**Warning:** This notebook contains offensive language from the dataset."
    ],
    "cell_type": "markdown",
    "metadata": {}
