--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "# Data & Methods\n",
     "\n",
-    "The dataset for this capstone project was sourced from a study called Automated Hate Speech Detection and the Problem of Offensive Language  conducted by Thomas Davidson and a team at Cornell University in 2017. The GitHub repository can be found [here](https://github.com/t-davidson/hate-speech-and-offensive-language). The dataset is provided as a `.csv` file with 24,802 text posts from Twitter where 6% of the tweets were labeled as hate speech. \n",
+    "The dataset for this capstone project was sourced from a study called *Automated Hate Speech Detection and the Problem of Offensive Language* conducted by Thomas Davidson and a team at Cornell University in 2017. The GitHub repository can be found [here](https://github.com/t-davidson/hate-speech-and-offensive-language). The dataset is provided as a `.csv` file with 24,802 text posts from Twitter where **6% of the tweets were labeled as hate speech**. \n",
     "\n",
     "Since content moderation is so subjective, the labels on this dataset were voted on by crowdsource and determined by majority-rules. The “class” column labels each tweet as 0 for hate speech, 1 for offensive language or 2 for neither. In order to create a different project and adapt the data to my specific business context, I will be treating the data as a binary classification problem. \n",
     "\n",
@@ -139,7 +139,7 @@
    "source": [
     "From these word clouds, we can see some more parallels and differences between what is classified as hate speech or not. For instance, #tcot stands for \"Top Conservatives On Twitter” and it appears in both groups. However, #teabagger, which refers to those who identify with the Tea Party, that is primarily (but not exclusively) associated with the Republican Party, appears in only the “Not Hate Speech” cloud. Both hashtags are used among Alt-Right communities.\n",
     "\n",
-    "Additionally, the #r**skins hashtag appears in only the Not Hate Speech cloud. This was the former name of the Washington NFL team. Knowing the context, we know that hashtag could certainly include text that constitutes as hate speech. With this, and other hashtags that appear in the “Not Hate Speech” cloud, we can clearly see the very slight differences between the two labels.\n",
+    "Additionally, the #r**skins hashtag appears in only the \"Not Hate Speech\" cloud. This was the former name of the Washington NFL team. Knowing the context, we know that hashtag could certainly include text that constitutes as hate speech. With this, and other hashtags that appear in the “Not Hate Speech” cloud, we can clearly see the very slight differences between the two labels.\n",
     "\n",
     "Besides that, others are simply pop culture references, such as #Scandal the TV show or #vote5sos referring to the boy band. It’s interesting that those contain a lot of offensive language, probably from fan reactions and community conflicts. Ultimately, we can recommend that **Twitter should closely monitor those top hashtags for potential posts containing hate speech** or even regular offensive language.\n"
    ],
@@ -174,9 +174,9 @@
     "- Hate Speech tweets on average have a compound score of -0.363\n",
     "- Non Hate Speech tweets on average have a compound score of -0.263\n",
     "\n",
-    "According to this metric, both classes of tweets have pretty negative sentiments because their normalized compound scores are less than -0.05. \n",
+    "According to this metric, both classes of tweets have pretty negative sentiments because their normalized compound scores are less than the threshold of -0.05. \n",
     "\n",
-    "Additionally from this graph, we can see that tweets classified as Hate Speech are especially negative. This further emphasizes how slim the difference between the two labels are. Although both classes contain negative and offensive language, Hate Speech is much more negative on average.\n"
+    "Additionally from the graph above, we can see that tweets classified as Hate Speech are especially negative. This further emphasizes how slim the difference between the two labels are. Although both classes contain negative and offensive language, Hate Speech is much more negative on average.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -197,7 +197,7 @@
   },
   {
    "source": [
-    "To reiterate, this graph shows the average polarity scores for each label. We can see that a majority were scored as neutral. However, of those that were scored as negative, it seems like \"Not Hate Speech\" had more on average."
+    "To reiterate, this graph shows the average polarity scores for each label. Which are positive, neutral or negative. We can see that a majority were scored as neutral. However, of those that were scored as negative, it seems like \"Not Hate Speech\" had more on average. This is probably because of the class imbalance."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -284,7 +284,14 @@
    "source": [
     "# Preprocessing Text Data\n",
     "\n",
-    "The original data from `twitter_data.csv` was cleaned using RegEx in the `data_cleaning.ipynb` notebook. "
+    "The original data from `twitter_data.csv` was cleaned using RegEx in the `data_cleaning.ipynb` notebook. \n",
+    "\n",
+    "**Cleaning Steps:**\n",
+    "\n",
+    "- Reassigning labels\n",
+    "- Lowercasing tweet text\n",
+    "- Removing hashtags, mentions, quotes and punctuation from tweet text\n",
+    "- Checking for missing values"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -392,7 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# applying the above function to our data/features \n",
+    "# applying the above function to our `clean_tweets`\n",
     "processed_data = list(map(process_tweet, data))"
    ]
   },
@@ -422,7 +429,7 @@
   },
   {
    "source": [
-    "We can see that the corpus has a vocabulary of 20,277 unique words. This is useful to know because that will be the amount of columns in the sparse matrix after TF-IDF Vectorization. But we'll get to that step later."
+    "We can see that **the corpus has a vocabulary of 20,277 unique words**. This is useful to know because that will be the amount of columns in the sparse matrix after TF-IDF Vectorization. But we'll get to that step later."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -470,7 +477,7 @@
     }
    ],
    "source": [
-    "# morphing `processed_data` into a readable list\n",
+    "# transforming `processed_data` into a readable list\n",
     "flat_filtered = [item for sublist in processed_data for item in sublist]\n",
     "# getting frequency distribution\n",
     "clean_corpus_freqdist = FreqDist(flat_filtered)\n",
@@ -480,7 +487,9 @@
   },
   {
    "source": [
-    "These top words are mostly offensive terms, and some other slang words that the NLTK stop words removal function didn't pick up."
+    "These top words are mostly offensive terms, and some other slang words that the NLTK stop words removal function didn't pick up.\n",
+    "\n",
+    "For a breakdown of the top words in each label, refer to [`eda_notebook.ipynb'](https://github.com/sidneykung/twitter_hate_speech_detection/blob/master/preprocessing/eda_notebook.ipynb)."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -489,7 +498,7 @@
    "source": [
     "## Lemmatization\n",
     "\n",
-    "This last method reduces each word into a linguistically valid **lemma**, or root word. It does this through linguistic mappings, using the WordNet lexical database.\n"
+    "This last method reduces each word into a linguistically valid **lemma**, or **root word**. It does this through linguistic mappings, using the WordNet lexical database.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -581,7 +590,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sparse matrix format with 265K stored elements\n",
+    "# sparse matrix format with 20K stored elements\n",
     "tfidf_data_train = tfidf.fit_transform(X_train)\n",
     "tfidf_data_test = tfidf.transform(X_test)"
    ]
@@ -610,7 +619,7 @@
   },
   {
    "source": [
-    "99.9% of the columns contain a zero, meaning that's a very **sparse matrix** with 265K columns"
+    "99.9% of the columns contain a zero, meaning that's a very **sparse matrix** with 20K columns"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -637,7 +646,7 @@
     "\n",
     "We will also be looking at the weighted F1 score, as it can account for the class imbalance in labels by calculating metrics for each label. It finds their average weighted by support (the number of true instances for each label). This results in a F1 score that is not between precision and recall.\n",
     "\n",
-    "Overall, we want as much hate speech to flagged as possible and so that it can be efficiently removed."
+    "Overall, we want as much hate speech to flagged as possible and so that it can be efficiently removed. This means optomizing the True Positive Rate."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -869,7 +878,7 @@
    "source": [
     "## Baseline Naive Bayes\n",
     "\n",
-    "This model is another common baseline classification algorithm that uses Bayes Theorem with an ssumption of independence between predictors. However, this assumption of independence is usually violated because the predictors are usually correlated to each other. That's where the \"Naive\" comes from.\n",
+    "This model is another common baseline classification algorithm that uses Bayes Theorem with an assumption of independence between predictors. However, this assumption of independence is usually violated because the predictors are usually correlated to each other. That's where the \"Naive\" comes from.\n",
     "\n",
     "Naive Bayes is a popular choice for text classification because it classifies based on the probabilities of events. Another pro is that this model takes less time to train."
    ],
@@ -942,7 +951,7 @@
   },
   {
    "source": [
-    "The F1 score dropped down to .1923. So, this model performed worse than both the Random Forest and Logistic Regression models. This is surprising because Naive Bayes typically perform pretty well with text data. This could indicate that preprocessing steps could be improved.\n",
+    "The F1 score dropped down to .1923. So, this model performed worse than both the Random Forest and Logistic Regression models. This is surprising because Naive Bayes typically performs pretty well with text data. This could indicate that preprocessing steps could be improved.\n",
     "\n",
     "For now, let's try the last baseline and decide which model to iterate on."
    ],
@@ -1142,7 +1151,7 @@
   },
   {
    "source": [
-    "After performing a fresh train test split of the original dataframe, the next step is tokenizing the text as usual. Again, we cna do this with NLTK."
+    "After performing a fresh train test split of the original dataframe, the next step is tokenizing the text as usual. Again, we can do this with NLTK."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1547,7 +1556,7 @@
   },
   {
    "source": [
-    "As suspected, based on the F1 scores,the Doc2Vec method wasn't able to predict both the 1 or 0 label as well as the TF-IDF Vectorized model.\n",
+    "As suspected, based on the F1 scores, the Doc2Vec method wasn't able to predict both the 1 or 0 label as well as the TF-IDF Vectorized model.\n",
     "\n",
     "Let's go back to the original Linear SVM and try other class imbalance remedy methods to improve the scores."
    ],
@@ -1565,7 +1574,7 @@
    "source": [
     "# Dealing with Class Imbalance\n",
     "\n",
-    "The initial SVM Baseline dealt with class imbalance with the parameter `class_weight='balanced'`. Let's try other clas imbalance remedy methods to improve the baseline, before tuning hyperparameters with grid search."
+    "The initial SVM Baseline dealt with class imbalance with the parameter `class_weight='balanced'`. Let's try other class imbalance remedy methods to improve the baseline, before tuning hyperparameters with grid search."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1575,7 +1584,7 @@
     "## Over-Sampling with SMOTE\n",
     "This method over-samples the minority class, \"Hate Speech\".\n",
     "\n",
-    "Rather than simply oversampling the minority class with replacement (which simply adds duplicate cases to the dataset), the algorithm generates new sample data by creating ‘synthetic’ examples that are combinations of the closest minority class cases.\n",
+    "Rather than simply oversampling the minority class with replacement (which adds duplicate cases to the dataset), the algorithm generates new sample data by creating ‘synthetic’ examples that are combinations of the closest minority class cases.\n",
     "\n",
     "After synthetically resampling our data, we no longer need to lean on penalized class weights in order to improve our model tuning."
    ],
@@ -2371,7 +2380,7 @@
    "source": [
     "## Overfit or Underfit?\n",
     "\n",
-    "Let's backtrack for a minute and see how the model predicts the testing data. We can use this F1 score to determine if the final model is overfit or underfit."
+    "Let's backtrack for a minute and see how the model predicts the training data. We can use this F1 score to determine if the final model is overfit or underfit."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -2438,7 +2447,7 @@
     }
    ],
    "source": [
-    "# generating normalized confusion matrix\n",
+    "# generating standard confusion matrix\n",
     "SVM_conf_matrix = plot_confusion_matrix(SVM_baseline, tfidf_data_test, y_test,\n",
     "                                 display_labels=None,\n",
     "                                 cmap=plt.cm.Blues)\n",
@@ -2516,7 +2525,10 @@
     "\n",
     "It's important to understand why the model performed so poorly and how that relates to the business problem. The F1 score was brought down by the \"Hate Speech\" label predictions. The model was able to predict 95% of the \"Not Hate Speech\" labels correctly, but it performed poorly for the other label, only able to correctly predict 44%. \n",
     "\n",
-    "**This poor performance is indicative of the two major roadblocks of the project:** (1) the class imbalance of the dataset and (2) the model's ability to identify what constitutes as hate speech.\n",
+    "**This poor performance is indicative of the two major roadblocks of the project:** \n",
+    "\n",
+    "1. Massive class imbalance of the dataset\n",
+    "2. Model's inability to identify what constitutes as hate speech.\n",
     "\n",
     "The issue of class imbalance is manageable with preprocessing techniques and oversampling/undersampling techniques. However, identifying hate speech is an overall problem that many major tech companies like Twitter, Facebook and Instagram are still struggling with.\n",
     "\n",
