--- a/preprocessing/data_cleaning.ipynb
+++ b/preprocessing/data_cleaning.ipynb
@@ -454,7 +454,7 @@
     "# function to clean all data\n",
     "def clean_text_round1(text):\n",
     "    '''Make text lowercase, remove text in square brackets, remove punctuation and remove words containing numbers.'''\n",
-    "    # make text lowecase\n",
+    "    # make text lowercase\n",
     "    text = text.lower()\n",
     "    # removing text within brackets\n",
     "    text = re.sub('\\[.*?\\]', '', text)\n",
