--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -423,7 +423,7 @@
    "outputs": [],
    "source": [
     "def process_tweet(text):\n",
-    "    \"\"\"tokeenize text in each column and remove stop words\"\"\"\n",
+    "    \"\"\"tokenize text in each column and remove stop words\"\"\"\n",
     "    tokens = nltk.word_tokenize(text)\n",
     "    stopwords_removed = [token.lower() for token in tokens if token.lower() not in stop_words]\n",
     "    return stopwords_removed "
