pickling for web_app

--- a/models/baselines.ipynb
+++ b/models/baselines.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,13 +110,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# sparse matrix format with 265K stored elements\n",
     "tfidf_data_train = tfidf.fit_transform(X_train)\n",
     "tfidf_data_test = tfidf.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## pickling X_train\n",
+    "pickle_out = open(\"../pickle/X_train.pkl\",\"wb\")\n",
+    "pickle.dump(X_train, pickle_out)\n",
+    "pickle_out.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## pickling tfidf_data_train\n",
+    "pickle_out = open(\"../pickle/tfidf_data_train.pkl\",\"wb\")\n",
+    "pickle.dump(tfidf_data_train, pickle_out)\n",
+    "pickle_out.close()"
    ]
   },
   {
