adding cross_validation function

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -231,17 +231,14 @@
     "# NLP libraries\n",
     "import nltk\n",
     "from sklearn.feature_extraction import text \n",
-    "from nltk.stem import WordNetLemmatizer \n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "from nltk.stem import WordNetLemmatizer, PorterStemmer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer, TfidfTransformer\n",
     "from nltk.probability import FreqDist\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.stem import PorterStemmer\n",
     "from gensim.models.doc2vec import Doc2Vec, TaggedDocument\n",
     "\n",
     "# modeling libraries\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
     "from imblearn.over_sampling import SMOTE\n",
     "from imblearn.under_sampling import TomekLinks\n",
     "from collections import Counter\n",
@@ -676,7 +673,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CPU times: user 37.4 s, sys: 203 ms, total: 37.6 s\nWall time: 37.8 s\n"
+      "CPU times: user 41.2 s, sys: 427 ms, total: 41.6 s\nWall time: 42.5 s\n"
      ]
     }
    ],
@@ -776,7 +773,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CPU times: user 2.85 s, sys: 54 ms, total: 2.91 s\nWall time: 808 ms\n"
+      "CPU times: user 2.85 s, sys: 95 ms, total: 2.95 s\nWall time: 1.01 s\n"
      ]
     }
    ],
@@ -870,7 +867,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CPU times: user 10 ms, sys: 4.37 ms, total: 14.4 ms\nWall time: 15 ms\n"
+      "CPU times: user 41.3 ms, sys: 6.95 ms, total: 48.3 ms\nWall time: 20.9 ms\n"
      ]
     }
    ],
@@ -973,7 +970,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CPU times: user 51.3 s, sys: 861 ms, total: 52.1 s\nWall time: 52.6 s\n"
+      "CPU times: user 51.8 s, sys: 970 ms, total: 52.8 s\nWall time: 53.3 s\n"
      ]
     }
    ],
@@ -1029,6 +1026,65 @@
    "source": [
     "# adding scores to metric_dict\n",
     "metric_dict['Baseline SVM'] = {'precision': SVM_precision, 'recall': SVM_recall, 'f1_score': SVM_f1_score, 'weighted_f1': SVM_f1_weighted}"
+   ]
+  },
+  {
+   "source": [
+    "### Cross Validation Score\n",
+    "\n",
+    "How does this give us a better point of comparison on how each model performs on unseen data?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "⏳ the cell below takes about 3 minutes to run"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Cross-Validation F1 Scores: [0.35356201 0.37433155 0.33057851 0.4099723  0.36997319]\n\nMin:  0.330579\nMax:  0.409972\nMean:  0.367684\nRange:  0.079394\nCPU times: user 2min 29s, sys: 2.26 s, total: 2min 31s\nWall time: 2min 32s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "helpers.cross_validation(SVM_baseline, tfidf_data_train, y_train, 'f1', 5)"
+   ]
+  },
+  {
+   "source": [
+    "⏳ the cell below takes about 4 seconds to run"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Cross-Validation F1 Scores: [0.28888889 0.42857143 0.25882353 0.35164835 0.34042553]\n\nMin:  0.258824\nMax:  0.428571\nMean:  0.333672\nRange:  0.169748\nCPU times: user 3.26 s, sys: 23.1 ms, total: 3.28 s\nWall time: 3.3 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "helpers.cross_validation(SVM_baseline, tfidf_data_test, y_test, 'f1', 5)"
    ]
   },
   {
