adding some text

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -218,6 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# importing relevant libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -226,6 +227,7 @@
     "%matplotlib inline\n",
     "plt.style.use('bmh')\n",
     "import pickle\n",
+    "# custom fuctions\n",
     "from src import helper_functions as helpers\n",
     "\n",
     "# NLP libraries\n",
@@ -242,13 +244,13 @@
     "from imblearn.over_sampling import SMOTE\n",
     "from imblearn.under_sampling import TomekLinks\n",
     "from collections import Counter\n",
+    "from sklearn import metrics, utils, model_selection, svm\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn import metrics, utils, model_selection, svm\n",
     "from sklearn.svm import LinearSVC\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, plot_confusion_matrix, roc_curve, auc, classification_report"
+    "from sklearn.metrics import precision_score, recall_score, f1_score, confusion_matrix, plot_confusion_matrix, classification_report"
    ]
   },
   {
@@ -322,7 +324,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "From here, we'll be focusing on the `clean_tweets` column and the target variable, `label`."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2348,7 +2352,7 @@
     "\n",
     "To further develop this project, here are some immediate next steps that anyone could execute.\n",
     "\n",
-    "- Collect more potential \"Hate Speech\" data to be labeled by CrowdFlow voting system\n",
+    "- Collect more potential \"Hate Speech\" data to be labeled by CrowdFlower voting system\n",
     "- Improve final model with different preprocessing techniques, such as removing offensive language as stop words\n",
     "- Evaluate model with new tweets or other online forum data to see if it can generalize well\n",
     "- LDA Topic Modeling with Gensim\n",
