prepping for cross_val_score

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -1067,29 +1067,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make sure this works\n",
+    "SVM_cv_f1 = round(scores.mean(), 6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clean this section up by adding this to the above dict. if it works for everythig, then change each model.\n",
+    "metric_dict['Baseline SVM'] = {'cv_f1': SVM_cv_f1}"
+   ]
+  },
+  {
    "source": [
     "⏳ the cell below takes about 4 seconds to run"
    ],
    "cell_type": "markdown",
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Cross-Validation F1 Scores: [0.28888889 0.42857143 0.25882353 0.35164835 0.34042553]\n\nMin:  0.258824\nMax:  0.428571\nMean:  0.333672\nRange:  0.169748\nCPU times: user 3.26 s, sys: 23.1 ms, total: 3.28 s\nWall time: 3.3 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "helpers.cross_validation(SVM_baseline, tfidf_data_test, y_test, 'f1', 5)"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -2207,6 +2209,17 @@
     "From this training metric, we can determine that the final model is only ** *slightly* underfit**.\n",
     "\n",
     "Next, let's look at how the model was able to predict each label."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # using cross validation metric instead\n",
+    "# %%time\n",
+    "# helpers.cross_validation(SVM_baseline, tfidf_data_test, y_test, 'f1', 5)"
    ]
   },
   {
