--- a/final_backup.ipynb
+++ b/final_backup.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Twitter Hate Speech Detection\n",
     "\n",
+    "This notebook is a back-up copy, before Cross Validation was implimented.\n",
+    "\n",
     "## *Can Content Moderation Be Automated?*"
    ]
   },
